--- a/index.html
+++ b/index.html
@@ -4,11 +4,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- poppins font cdn -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+
+  <!-- daisyUi + tailwindcss cdn-->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Document</title>
+
+
+
+  <style>
+    .poppins-font {
+      font-family: "Poppins", serif;
+    }
+  </style>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'btn-primary': '#E76F51',
+          }
+        }
+      }
+    }
+  </script>
 </head>
 
-<body>
+<body class="poppins-font">
+  <!-- header -->
+  <header class="container relative py-6 mx-auto text-white bg-[#ffffff00]">
+    <!-- navigation -->
+    <div class="flex justify-evenly z-1 max-w-screen-lg mx-auto items-center">
+      <h3 class="flex-1 text-4xl font-bold">Go Ride</h3>
+      <nav>
+        <ul class="flex gap-10 font-medium">
+          <li><a href="">Home</a></li>
+          <li><a href="">Shop</a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <button class="inline-block text-white btn ml-10 bg-btn-primary px-8">Login</button>
+    </div>
 
+    <!-- hero section -->
+    <div class="hero absolute -z-10 top-0 min-h-screen" style="background-image: url(/images/others/bg-bike.jpg);">
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-white">
+        <div class="max-w-3xl">
+          <h1 class="mb-5 text-5xl font-bold">Keep Your Ride Safe <br> At Every Time</h1>
+          <p class="mb-5">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor
+            do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+            amet.
+          </p>
+          <button class="btn bg-btn-primary text-white">Purchase</button>
+        </div>
+      </div>
+    </div>
+
+
+  </header>
+
+  <!-- main section -->
+  <main>
+
+  </main>
+
+  <!-- footer -->
+  <footer>
+
+  </footer>
 </body>
 
 </html>
