latest news added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <!-- hero section -->
-    <div class="hero top-0 min-h-screen" style="background-image: url(/images/others/bg-bike.jpg);">
+    <div class="hero top-0 min-h-screen" style="background-image: url(images/others/bg-bike.jpg);">
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content pt-40 text-white">
         <div class="max-w-3xl">
@@ -94,6 +94,53 @@
       </div>
     </div>
 
+    <!-- latest news -->
+    <div class="w-[1140px] mx-auto">
+      <!-- Heading -->
+      <h2 class="text-5xl font-semibold mb-10">Latest News</h2>
+      <!-- cards -->
+      <div class="md:flex space-y-5 md:space-y-0 gap-5">
+        <div class="card bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="images/others/latest1.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="images/others/latest1.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="images/others/latest1.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- footer -->
