--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
       </div>
 
       <!-- cards -->
-      <div class="md:flex space-y-5 md:space-y-0 gap-5">
-        <div class="card bg-base-100 w-96 shadow-xl">
+      <div class="md:flex space-y-5 m-5 md:5-0 md:space-y-0 gap-5">
+        <div class="card bg-base-100 md:m-0 p-8 w-full md:w-96 shadow-xl">
           <figure>
-            <img src="images/others/latest1.png" alt="Shoes" />
+            <img src="images/others/latest1.png" class="w-full" alt="Shoes" />
           </figure>
           <div class="card-body">
             <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
@@ -116,9 +116,9 @@
             </div>
           </div>
         </div>
-        <div class="card bg-base-100 w-96 shadow-xl">
+        <div class="card bg-base-100 md:m-0 p-8 w-full md:w-96 shadow-xl">
           <figure>
-            <img src="images/others/latest1.png" alt="Shoes" />
+            <img src="images/others/latest1.png" class="w-full" alt="Shoes" />
           </figure>
           <div class="card-body">
             <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
@@ -129,9 +129,9 @@
             </div>
           </div>
         </div>
-        <div class="card bg-base-100 w-96 shadow-xl">
+        <div class="card bg-base-100 md:m-0 p-8 w-full md:w-96 shadow-xl">
           <figure>
-            <img src="images/others/latest1.png" alt="Shoes" />
+            <img src="images/others/latest1.png" class="w-full" alt="Shoes" />
           </figure>
           <div class="card-body">
             <h2 class="text-[28px] font-semibold">Ducati XDIAVEL S-73</h2>
