--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <!-- reviews -->
       <div class="md:flex gap-5">
         <!-- 1st review -->
-        <div class="card bg-base-100 w-96 shadow-xl border">
+        <div class="card bg-base-100 m-5 md:m-0 p-8 w-full md:w-96 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="images/others/user-1.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -179,7 +179,7 @@
         </div>
 
         <!-- 2nd review -->
-        <div class="card bg-base-100 w-96 shadow-xl border">
+        <div class="card bg-base-100 m-5 md:m-0 p-8 w-full md:w-96 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="images/others/user-2.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -203,7 +203,7 @@
         </div>
 
         <!-- 3rd review -->
-        <div class="card bg-base-100 w-96 shadow-xl border">
+        <div class="card bg-base-100 m-5 md:m-0 p-8 w-full md:w-96 shadow-xl border">
           <figure class="px-10 pt-10">
             <img src="images/others/user-3.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -230,6 +230,9 @@
 
     <!-- FAQ -->
     <div class="max-w-[1140px] mx-auto">
+      <!-- heading -->
+      <h2 class="text-5xl text-center font-semibold mb-10">Frequently <span class="text-[#E76F51]">Asked
+          Questions</span></h2>
       <!-- image section -->
       <div class="hero min-h-screen">
         <div class="hero-content flex-col lg:flex-row">
