--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <h2 class="text-5xl text-center font-semibold mb-10">Frequently <span class="text-[#E76F51]">Asked
           Questions</span></h2>
       <!-- image section -->
-      <div class="hero min-h-screen">
+      <div class="hero min-h-screen p-5 justify-center">
         <div class="hero-content flex-col lg:flex-row">
           <img src="images/others/faq.png" class="max-w-sm rounded-lg" />
 
